objects/Device__c/Device__c.object-meta.xml
<CustomObject>
    <label>Device</label>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>Setting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>