objects/Device__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MOBILE VIEW</fullName>
            </value>
            <value>
                <fullName>DESKTOP VIEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>