objects/Device__c/fields/UserAgent__c.field-meta.xml
<CustomField>
    <fullName>UserAgent__c</fullName>
    <label>UserAgent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>